# hrm_nextbean_api/docs/swagger.json
@@ -893,13 +893,25 @@
                     {
                         "type": "string",
                         "description": "get project which have start date from this date",
-                        "name": "start-date-from",
+                        "name": "est-start-time-from",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "get project which have start date to this date",
-                        "name": "start-date-to",
+                        "name": "est-start-time-to",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "get project which have completed date from this date",
+                        "name": "est-completion-time-from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "get project which have completed date to this date",
+                        "name": "est-completion-time-to",
                         "in": "query"
                     }
                 ],
@@ -2070,7 +2082,7 @@
                     },
                     {
                         "type": "integer",
-                        "description": "Filter by account ID",
+                        "description": "Filter by timetable ID",
                         "name": "id",
                         "in": "query"
                     },
@@ -2088,8 +2100,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "Filter by status ~ ex: denied-approved | processing-denied-approved",
-                        "name": "status",
+                        "description": "Filter by verified ~ ex: denied-approved | processing-denied-approved",
+                        "name": "verified",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by status-attendance ~ ex: denied-approved | processing-denied-approved",
+                        "name": "status-attendance",
                         "in": "query"
                     },
                     {
@@ -2357,10 +2375,10 @@
         "model.ApproveTimetable": {
             "type": "object",
             "required": [
-                "status"
+                "verified"
             ],
             "properties": {
-                "status": {
+                "verified": {
                     "type": "string"
                 }
             }
@@ -2727,16 +2745,16 @@
                 "description": {
                     "type": "string"
                 },
-                "duration": {
+                "est-completion-time": {
+                    "type": "string"
+                },
+                "est-start-time": {
                     "type": "string"
                 },
                 "id": {
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "start-date": {
                     "type": "string"
                 },
                 "status": {
@@ -2748,21 +2766,21 @@
             "type": "object",
             "required": [
                 "description",
-                "duration",
-                "name",
-                "start-at"
+                "est-completion-time",
+                "est-start-time",
+                "name"
             ],
             "properties": {
                 "description": {
                     "type": "string"
                 },
-                "duration": {
+                "est-completion-time": {
+                    "type": "string"
+                },
+                "est-start-time": {
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "start-at": {
                     "type": "string"
                 }
             }
@@ -2798,6 +2816,9 @@
                     "type": "string"
                 },
                 "project-id": {
+                    "type": "string"
+                },
+                "project-name": {
                     "type": "string"
                 },
                 "status": {
@@ -2876,16 +2897,22 @@
         "model.Timtable": {
             "type": "object",
             "properties": {
-                "act-end": {
+                "act-clockin": {
                     "type": "string"
                 },
-                "act-start": {
+                "act-clockout": {
                     "type": "string"
                 },
-                "est-end": {
+                "clockin-validated": {
                     "type": "string"
                 },
-                "est-start": {
+                "clockout-validated": {
+                    "type": "string"
+                },
+                "est-end-time": {
+                    "type": "string"
+                },
+                "est-start-time": {
                     "type": "string"
                 },
                 "id": {
@@ -2897,10 +2924,13 @@
                 "office-time": {
                     "type": "string"
                 },
-                "status": {
+                "status-attendance": {
                     "type": "string"
                 },
                 "student-code": {
+                    "type": "string"
+                },
+                "verified": {
                     "type": "string"
                 }
             }
@@ -2976,22 +3006,22 @@
             "type": "object",
             "required": [
                 "description",
-                "duration",
+                "est-completion-time",
+                "est-start-time",
                 "name",
-                "start-date",
                 "status"
             ],
             "properties": {
                 "description": {
                     "type": "string"
                 },
-                "duration": {
+                "est-completion-time": {
+                    "type": "string"
+                },
+                "est-start-time": {
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "start-date": {
                     "type": "string"
                 },
                 "status": {
