# hrm_nextbean_api/services/ProServices/model/model_project.go
@@ -1,10 +1,10 @@
 package model
 
 type Project struct {
-	Id          string `json:"id"`
-	Name        string `json:"name"`
-	Status      string `json:"status"`
-	Description string `json:"description"`
-	StartDate   string `json:"start-date,omitempty"`
-	Duration    string `json:"duration,omitempty"`
+	Id                string `json:"id"`
+	Name              string `json:"name"`
+	Status            string `json:"status"`
+	Description       string `json:"description"`
+	EstStartTime      string `json:"est-start-time,omitempty"`
+	EstCompletionTime string `json:"est-completion-time,omitempty"`
 }
