# hrm_nextbean_api/services/TimetableServices/model/model_approve.go
@@ -1,5 +1,5 @@
 package model
 
 type ApproveTimetable struct {
-	Status string `json:"status" validate:"required,type=enum(denied or approved)"`
+	Verified string `json:"verified" validate:"required,type=enum(denied or approved)"`
 }
