# hrm_nextbean_api/services/TimetableServices/model/model_timetable.go
@@ -1,13 +1,16 @@
 package model
 
 type Timtable struct {
-	Id          string `json:"id"`
-	InternName  string `json:"intern_name"`
-	StudentCode string `json:"student-code"`
-	OfficeTime  string `json:"office-time"`
-	EstStart    string `json:"est-start"`
-	EstEnd      string `json:"est-end"`
-	ActStart    string `json:"act-start"`
-	ActEnd      string `json:"act-end"`
-	Status      string `json:"status"`
+	Id                string `json:"id"`
+	InternName        string `json:"intern_name"`
+	StudentCode       string `json:"student-code"`
+	OfficeTime        string `json:"office-time"`
+	Verified          string `json:"verified"`
+	EstStartTime      string `json:"est-start-time"`
+	EstEndTime        string `json:"est-end-time"`
+	ActClockin        string `json:"act-clockin"`
+	ClockinValidated  string `json:"clockin-validated"`
+	ActClockout       string `json:"act-clockout"`
+	ClockoutValidated string `json:"clockout-validated"`
+	StatusAttendance  string `json:"status-attendance"`
 }
